# serein-tmr-gateway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
config/: providers.toml  waf_signatures.json
crates/cache-storage/: Cargo.toml
crates/cache-storage/src/: adversarial_poison.rs  flight_recorder.rs  hex_evasion.rs  lib.rs  staleness.rs  tmr_cache.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: jittered_backoff.rs  lib.rs  tmr_consensus.rs
crates/core/: Cargo.toml
crates/core/src/: abi_guard.rs  allocator.rs  config.rs  lib.rs  model_interface.rs
crates/core/src/engine/: fuel_monitor.rs  hot_swap.rs  mod.rs  wasmtime_rt.rs
crates/core/src/security/: capabilities.rs  hmac_auth.rs  log_sanitizer.rs  masking.rs  mock_hsm.rs  mod.rs  tpm_measure.rs
crates/interfaces/: Cargo.toml  data-persistence.wit  serein-adapter.wit  serein-aegis.wit
crates/interfaces/src/: lib.rs
crates/llm-router/: Cargo.toml
crates/llm-router/src/: coordinator.rs  egress_guard.rs  lib.rs  memory_hints.rs  prompt_cache.rs  provider.rs  write_discipline.rs
crates/llm-router/src/web3/: crypto_billing.rs  mod.rs  proof_logger.rs
crates/sandbox-guard/: Cargo.toml  component.toml
crates/sandbox-guard/src/: deterministic_hooks.rs  lib.rs  mcp_server.rs  signature_verify.rs  wasi_virt.rs  xml_harness.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/traffic-control/: Cargo.toml
crates/traffic-control/src/: circuit_breaker.rs  lib.rs  rate_limiter.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
plugins/openai-compatible/: Cargo.toml
plugins/openai-compatible/src/: bindings.rs  lib.rs
scripts/: provision-gateway.ps1
tests/fixtures/: payload.json
tests/integration/: verify-tmr-consensus.ps1
tests/load/: k6-gateway-stress.js
