# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "apps/*",
    "crates/*",
    "plugins/*"
]

[workspace.dependencies]
wasmtime = { version = "22.0.0", features = ["component-model", "async", "pooling-allocator"] }
wasmtime-wasi = "22.0.0"
anyhow = "1.0.86"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wit-bindgen = { version = "0.25.0", features = ["macros"] }
async-trait = "0.1.77"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
schemars = "0.8.19"
secrecy = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"
blake3 = { version = "1.5", features = ["pure"] }
rayon = "1.10"

[workspace.package]
version = "0.1.0"
authors = ["Changqing Zhang"]
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

# ------------------------------------------------------------------------------
# LOCAL PERFORMANCE TESTING PROFILE (Auto-scaled Concurrency)
# ------------------------------------------------------------------------------
[profile.release-local]
inherits = "release"
opt-level = 3
lto = "thin"
debug = true
split-debuginfo = "unpacked"
