# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-cache-storage"
version = "0.1.0"
edition = "2021"
description = "Serein Cache Storage - System Resilience, Flight Recorder & Adversarial Defense"
license = "AGPL-3.0-or-later"
readme = "README.md"

# Dependencies from workspace
[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["sync", "rt", "time", "macros", "fs", "io-util"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10"
rand = "0.8.5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"