# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-core"
version = "0.1.0"
edition = "2021"
description = "Serein Core Kernel - Wasmtime Host & Trusted Computing Base"
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = { workspace = true }
sqlx = { version = "0.8.0", default-features = false, features = ["sqlite", "uuid", "chrono", "runtime-tokio-rustls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
arc-swap = "1.7"
parking_lot = { version = "0.12", features = ["send_guard"] }
notify = { version = "6.1", features = ["macos_kqueue"] }

# Encryption and hashing dependencies for Zero-Trust Data Persistence
aes-gcm = "0.10.3"
sha2 = "0.10.8"
hmac = "0.12.1"
rand = "0.8.5"
hex = "0.4.3"
secrecy = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10"

# WASI-NN for on-device SLM inference
wasi-nn = { version = "0.6.0", optional = true }
candle-core = { version = "0.9.2", optional = true }
wasmtime-wasi-nn = { version = "22.0.1", optional = true }

# Kernel-specific dependencies
[dependencies.serein-interfaces]
path = "../interfaces"

[dependencies.serein-traffic-control]
path = "../traffic-control"

[dependencies.serein-llm-router]
path = "../llm-router"

[dependencies.serein-sandbox-guard]
path = "../sandbox-guard"
features = ["host-engine"]

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
secure-hardware = []
wasi-nn = ["dep:wasi-nn", "dep:candle-core", "dep:wasmtime-wasi-nn"]


