# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-interfaces"
version = "0.1.0"
edition = "2021"
description = "Serein Core - WASI 0.3 Component Model Interfaces"
license = "AGPL-3.0-or-later"
readme = "README.md"

# This package contains WIT interface definitions only
# No Rust code - interfaces are used by other workspace members
# via wit-bindgen for component model bindings

[package.metadata.wit]
interface-files = ["data-persistence.wit"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"
regex = "1.10"