# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-llm-router"
version = "0.1.0"
edition = "2021"
description = "Serein LLM Router - LLM Determinism, Adjudication & Anti-Ban Protocol"
license = "AGPL-3.0-or-later"
readme = "README.md"

# Dependencies from workspace
[dependencies]
serein-interfaces = { path = "../interfaces" }
serein-traffic-control = { path = "../traffic-control" }
serein-consensus = { path = "../consensus" }
serein-worker = { path = "../worker" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
tokio = { version = "1.50.0", features = ["rt", "time", "macros", "sync"] }
reqwest = { version = "0.12.4", features = ["json"] }
url = "2.5"
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
futures = "0.3"
regex = "1.10"
parking_lot = { version = "0.12", features = ["send_guard"] }
dashmap = "6"
async-trait = "0.1"
toml = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
wasi-nn = []
