# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-traffic-control"
version = "0.1.0"
edition = "2021"
description = "Serein Traffic Control - L4/L7 API Gateway with Zero-Trust Security"
license = "AGPL-3.0-or-later"
readme = "README.md"

# Dependencies from workspace
[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
parking_lot = "0.12"
dashmap = "6"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

