# Copyright (c) 2026 Changqing Zhang. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "serein-worker"
version = "0.1.0"
edition = "2021"
description = "Serein Worker - Privacy Firewall and NER Masking"
license = "AGPL-3.0-or-later"
readme = "README.md"

# Dependencies from workspace
[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["rt", "sync", "macros", "time"] }
regex = "1.10"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"